--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body><div id="header">
-        <h1>Today is Aradhana's birthday</h1> 
+        <h1>Today is Arya's birthday</h1> 
         <img id="gf-img" src = "pexels-pixabay-36029.jpg">
         <h2 id="bday-age">4 years old</h2>
         <h4 id="bday-date">01.11.2020</h4>
